# openspatial-linux-SDK

./: CMakeLists.txt  HOWTO  README.md
framework/: CMakeLists.txt
framework/test-bench/: CMakeLists.txt  test_main.c  test_opcodes.h  test_runner.c
include/: nodlabs.h
include/nodlabs/: advertisement.h  version.h
src/: CMakeLists.txt  advertisement.c  advertisement.h  eir.h  ring_gatt_profile.h  uuid.c  uuid.h
